[gd_scene load_steps=4 format=3 uid="uid://ckymc0ian0kb2"]

[ext_resource type="Texture2D" uid="uid://dcdy8ovi3qhk5" path="res://Textures/Items/Weapons/sword.png" id="1_nm3xb"]
[ext_resource type="Script" path="res://Utility/item_option.gd" id="1_qgil2"]
[ext_resource type="FontFile" uid="uid://dfk2j1o6hwrxn" path="res://Font/tenderness.otf" id="2_uqj30"]

[node name="ItemOption" type="TextureButton"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.139
offset_right = 0.159988
offset_bottom = -0.0400047
pivot_offset = Vector2(90, 25)
action_mode = 0
script = ExtResource("1_qgil2")

[node name="BackgroundColor" type="ColorRect" parent="."]
custom_minimum_size = Vector2(180, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(0.705882, 0.705882, 0.705882, 1)

[node name="BackgroundItemColor" type="ColorRect" parent="BackgroundColor"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="BackgroundColor/BackgroundItemColor"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_nm3xb")

[node name="LabelItemName" type="Label" parent="BackgroundColor"]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_uqj30")
text = "Name"
horizontal_alignment = 1

[node name="LabelItemDescription" type="Label" parent="BackgroundColor"]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_uqj30")
theme_override_font_sizes/font_size = 8
text = "Description of item"
autowrap_mode = 2

[node name="LabelItemLevel" type="Label" parent="BackgroundColor"]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_uqj30")
theme_override_font_sizes/font_size = 12
text = "level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
